date runner: match timezones by whether it's contained

Having to match Paris by "Europe/Par" is not intuitive.

BUG: 403271